wrote some shit auto-commit
Signed-off-by: Paul Balaji <paulmonish@gmail.com>

--- a/dissertation/report.tex
+++ b/dissertation/report.tex
@@ -1758,8 +1758,12 @@ One obvious configuration change we have made and kept since the beginning is to
 
 In fact, the only intentional cross-worker communication is from the OrderGenerator to a target Controller when sending a new \texttt{DeliveryRequest} at its defined rate. Essentially, by distributing the raw workload in a similar way to the distribution of delivery requests across Controllers, we obtain an efficient, parallel, distributed simulation.
 
-\subsection{Entity Interest Range}
 \subsection{Chunk Size}
+
+\subsection{Entity Interest Range}
+The second configuration change we make is to the entity interest range. This variable is used to define what entities a worker gets component updates for. Obviously workers authoritative over a specific area will get updates on entities in that area, but they also need to know about what is happening \textbf{nearby}.\\
+
+Given a worker with authority over entity E. The worker gets updates for the entire chunk that E is in. However, if there is a neighbouring chunk with any point inside this radius from entity E, the worker gets updates on this chunk too. By reducing the entity interest range, we can therefore reduce the number of neighbouring chunks that a worker has to check out and receive updates for.
 
 \section{Problems}
 \subsection{Max Unacked Pings Rate}
@@ -1806,12 +1810,12 @@ In fact, the only intentional cross-worker communication is from the OrderGenera
 % drones making delivering more than 1 package in a round trip
 % drones picking up non-hub packages and delivering to non-hub destinations
 % inter-controller communication
+% better load balancing (is this possible without manually defining controller positions)
 % pass request from one hub to another hub if there's spare capacity
 % more drone types
 % more package types
 % UnityClient for interactive simulation
 % improved data extraction tool
-
 
 %**********************************************%
 \newpage
