--- a/dissertation/report.tex
+++ b/dissertation/report.tex
@@ -1811,9 +1811,8 @@ To find out more about the inner workings of our simulated delivery networks, we
 
 This data is then displayed in the SpatialOS logs view on a deployment. To transfer this into a format we can perform analysis on, we have also implemented a browser-based tool that iterates through the logger view and extracts the logged metrics to a local file.
 
-\subsection{Choosing Metrics}
 % controller drones queue deliveries fullTrips revenue costs penalties avgDelTime avgWaitTime fDel fRet fLaunch collisions unknown rejecValue avgRejecValue potentialLost avgPotentialLost
-The focus of the project lies with the delivery network operation, not necessarily the simulation scale. Therefore, the important metrics for us are those that directly relate to the state of the Controllers.\\
+As the focus of the project lies with the operation of a delivery network, the important metrics for us are those that directly relate to the state of the Controllers and not necessarily the scale of the simulation.\\
 
 We preface each log string with the ``METRICS'' keyword, to make it easy to filter our logs from the runtime logs. Since each log is printed by a Controller, we keep track of the Controller's EntityId on each log so that we can investigate how Controllers in different regions of the world may behave relative to each other.
 
@@ -1826,13 +1825,21 @@ We preface each log string with the ``METRICS'' keyword, to make it easy to filt
 
 Knowing the number of drones in operation and length of the request queue is incredibly useful to determine the load on a Controller. For example, if the queue size is often a low number then we know that all incoming requests are going to be served as there would no eviction occuring.\\
 
-In order to calculate the profitability of a Controller, we need to know the revenue, costs and any penalties that may have been paid. Keeping track of the number of deliveries and completed round trips also allows us to compute the average profit per delivery down the line.\\
-
-Another interesting financial figure is the potential lost by each scheduler. This is the total value of deliveries that were evicted or rejected from a scheduler. We also track the average potential lost so we can determine which scheduler is better at evicting queue elements to maximise profit.\\
+In order to calculate the profitability of a Controller, we need to know the revenue, costs and any penalties that may have been paid. Keeping track of the number of deliveries and completed round trips also allows us to compute the average profit per delivery down the line. Another interesting financial figure is the potential lost by each scheduler. This is the sum of expected values for the deliveries that were evicted or rejected from a scheduler. We also track the average potential lost so we can determine which scheduler is better at evicting requests from the queue.\\
 
 In addition to the metrics defined in this section, there are values that represent the number of failed actions by a Controller. Controllers do not fail often enough anymore for these values to provide insight, but they have been left in for legacy debugging purposes.
 
 \section{Comparing Schedulers}
+We assert that the following comparisons utilise data taken from simulations based on the world defined by the original, smaller London snapshot.
+
+\subsection{Determining Load}
+
+\subsection{Profitability}
+\subsubsection{Average Profit per Delivery}
+\subsubsection{Total Profit}
+
+\subsection{Evicted Potential}
+
 % heavy load vs light load (queue size)
 % average profit per Delivery
 % total profit
